--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc -w",
-    "build-and-run": "tsc && node dist/index.js"
+    "build-and-run": "tsc && node dist/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,21 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "husky": "^8.0.3",
+    "jest": "^29.6.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.1",
+    "ts-graphviz": "^1.8.1"
   }
 }
