--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "dev": "tsc -w",
     "build-and-run": "tsc && node dist/index.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=dev jest"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,12 @@
     }
   },
   "dependencies": {
+    "@types/node": "^20.5.3",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
+    "langchain": "^0.0.132",
+    "openai": "^4.1.0",
     "ts-graphviz": "^1.8.1"
   }
 }
